# KairosCli

./: .gitignore  .releaserc.yml  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: builder.yml  default.yml  linter.yml  release.yml  tester.yml
src/: main.rs
