[package]
name = "kairos_cli"
version = "1.0.2"
edition = "2024"
authors = ["Jose Epifanio"]
description = "An AI-powered CLI for code analysis and refactoring."
repository = "https://github.com/JEpifanio90/KairosCli"
keywords = ["cli", "code-analysis", "ai", "rust"]
license = "MIT"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }